# SF_Project_6

./: README.md
client/: CMakeLists.txt
client/headers/: ClientCode.h  ConnectionTCP.h  IObserver.h  Messages.h  User.h  sha1.h
client/src/: ClientCode.cpp  ConnectionTCP.cpp  Messages.cpp  User.cpp  sha1.cpp
sever/: .clang-format  CMakeLists.txt  clients.json  messages.json
sever/headers/: Chat.h  ClientCode.h  ConnectionTCP.h  ISubject.h  Messages.h  jsonHandler.h
sever/src/: Chat.cpp  ClientCode.cpp  ConnectionTCP.cpp  Messages.cpp  jsonHandler.cpp  main.cpp
